fixed logo letter spacing

--- a/assets/less/modules/pageHeader.less
+++ b/assets/less/modules/pageHeader.less
@@ -11,7 +11,7 @@
     left: 60px;
     font-weight: normal;
     text-transform: uppercase;
-    letter-spacing: 0.1em;
+    letter-spacing: 0.3em;
   }
   #siteId {
     height: 30px;
